--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
             <div class = "card flex items-centre">
                 <img src="./images and logos/flutter.png" alt="">
-                <h3>flutter (Beginner)</h3>
+                <h3>flutter</h3>
             </div>
         </div>
     </section>
